--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,15 @@
+/config/parameters.yml
+
 # default symfony ignores
 
 /web/bundles/
 /app/bootstrap.php.cache
-/app/cache/*
-/app/config/parameters.yml
-/app/logs/*
-!app/cache/.gitkeep
-!app/logs/.gitkeep
 /app/phpunit.xml
 /build/
 
 # app artifacts
 
+/.cache/
 /logs/
 
 # vendor code
