--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~4.0",
         "doctrine/orm": "^2.4.8",
-        "doctrine/doctrine-bundle": "~1.4"
+        "doctrine/doctrine-bundle": "~1.4",
+
+        "michaldudek/foundation": ">=0.9,<2.0",
+        "willdurand/negotiation": "1.3.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8",
@@ -24,14 +27,14 @@
     },
     "scripts": {
         "post-install-cmd": [
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets"
+            "MD\\Flavour\\Composer\\ScriptHandler::buildBootstrap",
+            "MD\\Flavour\\Composer\\ScriptHandler::clearCache",
+            "MD\\Flavour\\Composer\\ScriptHandler::installAssets"
         ],
         "post-update-cmd": [
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets"
+            "MD\\Flavour\\Composer\\ScriptHandler::buildBootstrap",
+            "MD\\Flavour\\Composer\\ScriptHandler::clearCache",
+            "MD\\Flavour\\Composer\\ScriptHandler::installAssets"
         ]
     },
     "autoload": {
@@ -45,7 +48,7 @@
         }
     },
     "extra": {
-        "symfony-app-dir": "app",
+        "symfony-app-dir": ".cache",
         "symfony-web-dir": "web",
         "symfony-assets-install": "relative"
     }
