--- a/src/MyApp/Resources/config/config.yml
+++ b/src/MyApp/Resources/config/config.yml
@@ -1,8 +1,3 @@
-imports:
-    - { resource: parameters.yml }
-    - { resource: security.yml }
-    - { resource: services.yml }
-
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
@@ -13,7 +8,7 @@ framework:
     #translator:      { fallbacks: ["%locale%"] }
     secret:          "%secret%"
     router:
-        resource: "%kernel.root_dir%/config/routing.yml"
+        resource: "%kernel.root_dir%/Resources/routing/routing.yml"
         strict_requirements: ~
     form:            ~
     csrf_protection: ~
@@ -34,7 +29,9 @@ framework:
 # Twig Configuration
 twig:
     debug:            "%kernel.debug%"
-    strict_variables: "%kernel.debug%"
+    strict_variables: true
+    paths:
+        - "%kernel.project_dir%/views"
 
 # Doctrine Configuration
 doctrine:
