--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "michaldudek/symfony-project",
-    "description": "Project skeleton for Symfony2 in MD flavour.",
+    "description": "Symfony MD Flavour Edition skeleton project.",
     "license": "MIT",
     "type": "project",
     "authors": [
@@ -14,26 +14,13 @@
         "symfony/symfony": "2.7.*",
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~4.0",
-        "doctrine/orm": "^2.4.8",
-        "doctrine/doctrine-bundle": "~1.4",
-
-        "michaldudek/foundation": ">=0.9,<2.0",
-        "willdurand/negotiation": "1.3.*"
+        "michaldudek/flavour": "~0.1",
+        "michaldudek/knit-bundle": "0.2.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8",
         "squizlabs/php_codesniffer": "~2.3",
         "phpmd/phpmd" : "~2.2"
-    },
-    "scripts": {
-        "post-install-cmd": [
-            "MD\\Flavour\\Composer\\ScriptHandler::clearCache",
-            "MD\\Flavour\\Composer\\ScriptHandler::installAssets"
-        ],
-        "post-update-cmd": [
-            "MD\\Flavour\\Composer\\ScriptHandler::clearCache",
-            "MD\\Flavour\\Composer\\ScriptHandler::installAssets"
-        ]
     },
     "autoload": {
         "psr-0": {
@@ -44,10 +31,5 @@
         "psr-4": {
             "Tests\\": "tests"
         }
-    },
-    "extra": {
-        "symfony-app-dir": ".cache",
-        "symfony-web-dir": "web",
-        "symfony-assets-install": "relative"
     }
 }
